force-app/main/default/objects/Storage_Location__c/Storage_Location__c.object-meta.xml
<CustomObject>
    <label>Storage Location</label>
    <nameField>
        <label>Storage Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Storage Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>