force-app/main/default/objects/Storage_Location__c/fields/Allowed_Storage__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Storage__c</fullName>
    <label>Allowed Storage Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sperm</fullName>
            </value>
            <value>
                <fullName>Embryos or Oocytes</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>