force-app/main/default/objects/Storage_Location__c/fields/Location_Tank__c.field-meta.xml
<CustomField>
    <fullName>Location_Tank__c</fullName>
    <label>Location Tank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tank 1</fullName>
            </value>
            <value>
                <fullName>Tank 2</fullName>
            </value>
            <value>
                <fullName>Tank 3</fullName>
            </value>
            <value>
                <fullName>Tank 4</fullName>
            </value>
            <value>
                <fullName>K10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>