force-app/main/default/objects/Storage_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Storage_Location_Risk__c</columns>
    <columns>Location_Tank__c</columns>
    <columns>Allowed_Storage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>